import * as React from 'react'
import { render } from '@testing-library/react'

import ListView from './index'

jest.mock('@material-ui/core', () => ({
  makeStyles: () => () => ({}),
}))

let firstPageQuery: any = { _tag: 'fetching' }

jest.mock('../model', () => ({
  use: () => ({
    state: {
      resultType: 'p',
      view: 'l',
      buckets: ['test-bucket'],
      latestOnly: true,
    },
    firstPageQuery,
  }),
  ResultType: {
    QuiltPackage: 'p',
    S3Object: 'o',
  },
  View: {
    Table: 't',
    List: 'l',
  },
}))

jest.mock('../NoResults', () => ({
  Skeleton: () => <div>Loading…</div>,
  Error: ({ children, kind }: { children?: React.ReactNode; kind?: string }) => {
    switch (kind) {
      case 'syntax':
        return (
          <section>
            <h1>Syntax error</h1>
            <details>{children}</details>
          </section>
        )
      case 'timeout':
        return (
          <section>
            <h1>Timeout error</h1>
            <details>{children}</details>
          </section>
        )
      default:
        return (
          <section>
            <h1>Unexpected error</h1>
            <details>{children}</details>
          </section>
        )
    }
  },
}))

jest.mock('./Hit', () => ({
  Object: jest.fn(),
  Package: jest.fn(),
}))

const ListPage = () => <ListView emptySlot={<div>No results</div>} onRefine={jest.fn()} />

describe('containers/Search/List/index', () => {
  beforeEach(() => {
    jest.clearAllMocks()
    firstPageQuery = { _tag: 'fetching' }
  })

  it('renders skeleton for fetching state', () => {
    firstPageQuery = { _tag: 'fetching' }

    const { container } = render(<ListPage />)
    expect(container).toMatchSnapshot()
  })

  it('renders error for error state', () => {
    firstPageQuery = {
      _tag: 'error',
      error: new Error('Network error'),
    }

    const { container } = render(<ListPage />)
    expect(container).toMatchSnapshot()
  })

  it('renders empty slot for EmptySearchResultSet', () => {
    firstPageQuery = {
      _tag: 'data',
      data: {
        __typename: 'EmptySearchResultSet',
      },
    }

    const { container } = render(<ListPage />)
    expect(container).toMatchSnapshot()
  })

  it('renders error for InputError', () => {
    firstPageQuery = {
      _tag: 'data',
      data: {
        __typename: 'InvalidInput',
        errors: [
          {
            name: 'ValidationError',
            path: 'search.query',
            message: 'Invalid search syntax',
          },
        ],
      },
    }

    const { container } = render(<ListPage />)
    expect(container).toMatchSnapshot()
  })

  it('renders syntax error for QuerySyntaxError', () => {
    firstPageQuery = {
      _tag: 'data',
      data: {
        __typename: 'InvalidInput',
        errors: [
          {
            name: 'QuerySyntaxError',
            path: 'search.query',
            message: 'Syntax error in query',
          },
        ],
      },
    }

    const { container } = render(<ListPage />)
    expect(container).toMatchSnapshot()
  })

  it('renders timeout error for OperationError with Timeout', () => {
    firstPageQuery = {
      _tag: 'data',
      data: {
        __typename: 'OperationError',
        name: 'Timeout',
        message: 'Request timeout',
      },
    }

    const { container } = render(<ListPage />)
    expect(container).toMatchSnapshot()
  })

  it('renders operation error for other OperationError', () => {
    firstPageQuery = {
      _tag: 'data',
      data: {
        __typename: 'OperationError',
        name: 'ServerError',
        message: 'Internal server error',
      },
    }

    const { container } = render(<ListPage />)
    expect(container).toMatchSnapshot()
  })
})
